# bachelorthesis-codebase

Join5/: CMakeLists.txt  LICENSE  README.md  conandata.yml
Join5/include/: Arena.h
Join5/include/Agents/: Agent.h  FFHindsightAgent.h  HumanAgent.h  LookupTableAgent.h  OneStepLookahead.h  RandomAgent.h  SparseSamplingAgent.h
Join5/include/Agents/Asap/: AsapAgent.h  AsapNode.h
Join5/include/Agents/Mcts/: MctsAgent.h  MctsNode.h  NestedMctsAgent.h
Join5/include/Games/: Gamestate.h
Join5/include/Games/MDPs/: JoinFive.h  Navigation.h  SailingWind.h
Join5/include/Games/Wrapper/: Determinization.h  FiniteHorizon.h  HeuristicsAsReward.h  MultiPlayerToMDP.h  RandomStart.h
Join5/include/Utils/: AgentMaker.h  Argparse.h  Distributions.h  MemoryAnalysis.h  MiscAnalysis.h  ModelMaker.h  UnitTest.h  ValueIteration.h
Join5/python/gameInterfacePy/: demo.py  game.py
Join5/resources/NavigationMaps/: 10_IPPC.txt  1_Anand.txt  1_IPPC.txt  1_Schmoecker.txt  2_Anand.txt  2_IPPC.txt  2_Schmoecker.txt  3_Anand.txt  3_IPPC.txt  4_Anand.txt  4_IPPC.txt  5_IPPC.txt  6_IPPC.txt  7_IPPC.txt  8_IPPC.txt  9_IPPC.txt  Test_Simple2x2.txt
Join5/resources/Quantiles/: gaussian.txt
Join5/src/: Arena.cpp  demo.cpp  main.cpp
Join5/src/Agents/: FFHindsightAgent.cpp  HumanAgent.cpp  LookupTableAgent.cpp  OneStepLookaheadAgent.cpp  RandomAgent.cpp  SparseSamplingAgent.cpp
Join5/src/Agents/Asap/: AsapAgent.cpp  AsapNode.cpp
Join5/src/Agents/Mcts/: MctsAgent.cpp  MctsNode.cpp  NestedMctsAgent.cpp
Join5/src/Games/MDPs/: JoinFive.cpp  Navigation.cpp  SailingWind.cpp
Join5/src/Games/Wrapper/: Determinization.cpp  FiniteHorizon.cpp  HeuristicsAsReward.cpp  MultiPlayerToMDP.cpp  RandomStart.cpp
Join5/src/Utils/: AgentMaker.cpp  CLink.cpp  Distributions.cpp  MemoryAnalysis.cpp  ModelMaker.cpp  ValueIteration.cpp
